# tuttifrutti

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/tuttifrutti/cli/: entry.py
src/tuttifrutti/image/: filter.py
src/tuttifrutti/lut/: __init__.py
src/tuttifrutti/serialization/: image.py
src/tuttifrutti/zero_mq/: config.py  entry.py  models.py
tests/: client.py
util/: cleanup_lut_dir.py
